# TDD-Obeying-the-GOAT

./: pyproject.toml
lists/: tests.py  views.py
lists/templates/: home.html
superlists/: settings.py  urls.py
tests/: functional_tests.py
