[tool.poetry]
name = "ttd-goat"
version = "0.1.0"
description = ""
authors = ["Manikanta Loya <mani.4272@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
